     work, removing the requirement for the inferred types to match
     declared types exactly.  Specializations are matched from first to
     last to resolve ambiguities (#1214).
  - Compiler rewrites for char{<,>,<=,>=,=}? are now safe (#1122).
  - When requesting to emit import libraries that don't exist, the
     compiler now gives an error instead of quietly continuing (#1188).

- Core libraries
   - SRFI-18: thread-join! no longer gives an error when passed a
     thread in the "sleeping" state (thanks to Joerg Wittenberger)
   - Irregex has been updated to 0.9.4, which fixes severe performance
     problems with {n,m} repeating patterns (thanks to Caolan McMahon).
   - Unit "posix": The following posix procedures now work on port
     objects: file-stat, file-size, file-owner, file-permissions,
     file-modification-time, file-access-time, file-change-time,
     file-type and all procedures using file-type. These are:
     regular-file?, symbolic-link?, block-device?, character-device?
     fifo? and socket?.

- Tools
  - A debugger is now available, known as "feathers", which allows
    basic source-level debugging of compiled Scheme code.
  - A statistical profiler has been added, enabling sampling-based
    runtime profiling of compiled programs.
  - "chicken-install"
    - When installing eggs in deploy mode, already satisfied
      dependencies aren't reinstalled every time (#1106).
  - "chicken-uninstall"
    - -prefix and -deploy options were added, matching chicken-install.
  - "chicken-status"
    - -prefix and -deploy options were added, matching chicken-install.

4.10.1

- Core libraries
  - try-compile from setup-api cleans up temporary output files (#1213).

- Runtime system:
  - The calling convention of CPS procedures has been changed to
    use "argument vectors" instead of C calling convention.
  - The C API of C_values(), C_do_apply() and how to invoke CPS
    functions has changed.  The C_procN() macros have disappeared.